<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/line_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txt_ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ssid"
            android:textColor="@color/workspace_icon_text_color"
            android:textSize="20.0sp" />

        <TextView
            android:id="@+id/ssid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.81" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_pswd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="0dp" >

        <TextView
            android:id="@+id/txt_pswd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/workspace_icon_text_color"
            android:textSize="20.0sp" />

        <EditText
            android:id="@+id/pswd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/edittext_shape"
            android:ems="10"
            android:textColor="@color/workspace_icon_text_color"
            android:textSize="20.0sp" >
        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/waiting_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/waiting_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectwaiting"
            android:textColor="@color/hint_text"
            android:textSize="18.0sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/start_config"
        android:textColor="@color/title_bar_background"
        android:textSize="20.0sp" />

</LinearLayout>