<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/soiltemp" />

        <EditText
            android:id="@+id/soiltemp"
           android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
            android:ems="5"
            android:textSize="15sp"
            android:focusableInTouchMode="true"
            android:inputType="number" />

        <Button
            android:id="@+id/Button1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>
    
    
    
    
    

   <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/soilhum" />

        <EditText
            android:id="@+id/soilhum"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="5"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView22"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>
    
    
    
    
    
    

    <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
             android:id="@+id/TextView3"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/ph" />

        <EditText
            android:id="@+id/ph"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView33"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>
    
    
    
    
    
    

    <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/textview4"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/airtemp" />

        <EditText
            android:id="@+id/airtemp"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:id="@+id/Button4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView44"
           android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>

   <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/TextView5"
           android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/airhum" />

        <EditText
            android:id="@+id/airhum"
           android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView55"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>
    
    
    
    
    
    

    <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/co2" />

        <EditText
            android:id="@+id/co2"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="number" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView66"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="5sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/illum" />

        <EditText
            android:id="@+id/illum"
            android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="0.5"
    	    android:focusableInTouchMode="true"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="number" >

            <requestFocus />
            
            
        </EditText>

        <Button
            android:id="@+id/Button7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/TextView77"
           android:layout_width="0dp"
   	 	    android:layout_height="match_parent"
    	    android:layout_weight="1"
    	    android:gravity="center"
    	    android:textSize="15dp"
            android:text="历史阈值：" />

    </LinearLayout>

</LinearLayout>
